Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>
 <a id="wordnews-english-chinese-cross-lingual-word-sense-disambiguation-dataset" class="anchor" href="#wordnews-english-chinese-cross-lingual-word-sense-disambiguation-dataset" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WordNews English-Chinese Cross-Lingual Word Sense Disambiguation dataset</h3>
 
-<p>This dataset allows evaluation of WSD systems. The format is in a similar format as Senseval-2 English Lexical Sample task. </p>
+<p>This dataset allows evaluation of WSD systems on a dataset consisting of sentences from real-world news articles written recently in 2015. The format is in a similar format as Senseval-2 English Lexical Sample task. The .dtd file of Senseval-2 Lexical Sample task is provided. The dataset was originally built as an evaluation dataset for the translation component of WordNews, an education software for language learning. </p>
         </section>
 
         <footer>
